<resources>
    <string name="app_name">TrackMe</string>
    <!-- Strings used for fragments for navigation -->


    <string name="about_info_general">Connect your device to our server application and track your device location.</string>
    <string name="about_info_settings">You can configure server connection in application settings.</string>
    <string name="about_info_server">Do not forget to add device ID to Your account in our server application.</string>
    <string name="tab_layout_connect">Connect</string>
    <string name="tab_layout_about">About</string>
    <string name="about_name">About</string>
    <string name="connect_name">Connect</string>
    <string name="settings_name">Settings</string>
    <string name="appName">TrackMe</string>ś

    <string name="welcomeText">Welcome!</string>
    <string name="about_generated_device_id">GENERATED DEVICE ID</string>
    <string name="about_info_location">We need to access to Your location to send it to our server. Otherwise our app will not work properly.</string>
    <string name="settings_title">Setup server data</string>
    <string name="settingsIpLabel">Server IP address:</string>
    <string name="serverPortLabel">Server port number</string>
    <string name="settings_interval_label">Sending interval</string>
    <string name="connect_title">Server connection</string>
    <string name="current_location_label">Last known location</string>
    <string name="last_send_label">Last send try at</string>

    <string-array name="intervalValues">
        <item>0.25 min</item>
        <item>0.5 min</item>
        <item>1 min</item>
        <item>2 min</item>
        <item>3 min</item>
        <item>4 min</item>
        <item>5 min</item>
    </string-array>


    <string name="back_to_app">Back to App</string>
    <string name="location_unknown">Location Unknown</string>
    <string name="location_updates_label">Location Updates</string>

    <string name="permission_rationale">Location permission needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core functionality.</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>

    <string name="start_track_location_button_text">Start tracking</string>
    <string name="stop_track_location_button_text">Stop tracking</string>
    <string name="preference_file_key">pl.latusikl.trackme.pref-file</string>
    <string name="no_location_text">No current location</string>
    <string name="server_connection_status">Server connection status</string>
    <string name="save_settings">Save settings</string>
    <string name="set_server_settings">Add server settings first</string>
    <string name="server_connection_unable">Unable to establish server connection. Try restart process or change settings.</string>
    <string name="server_connection_ok">Connected to server</string>
    <string name="settings_update_toast">Settings saved. Restart connection.</string>
    <string name="invalid_ip_port_toast">IP address and port are invalid.</string>
    <string name="invalid_port_toast">Port value is invalid.</string>
    <string name="invalid_ip_toast">IP address is invalid.</string>
    <string name="location_wait_info">Waiting for device location.</string>


</resources>
