<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="pl.latusikl.trackme.MainActivity">
    <item
        android:id="@+id/AboutFragment"
        android:enabled="true"
        android:title="@string/about_name"
        android:icon="@drawable/ic_baseline_info_24"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/ConnectFragment"
        android:enabled="true"
        android:title="@string/connect_name"
        android:icon="@drawable/ic_baseline_gps_fixed_24"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/SettingsFragment"
        android:enabled="true"
        android:title="@string/settings_name"
        android:icon="@drawable/ic_baseline_settings_24"
        app:showAsAction="ifRoom" />
</menu>
