<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondary"
    tools:context=".AboutFragment">

    <TextView
        android:id="@+id/about_permission_info"
        android:layout_width="180dp"
        android:layout_height="82dp"
        android:gravity="center"
        android:text="@string/about_info_location"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/about_info_server"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.421"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/about_configure_info"
        app:layout_constraintVertical_bias="0.376" />

    <TextView
        android:id="@+id/textViewWelcome"
        android:layout_width="155dp"
        android:layout_height="27dp"
        android:fontFamily="@font/arbutus"
        android:gravity="center"
        android:text="@string/welcomeText"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.042" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="217dp"
        android:layout_height="130dp"
        android:src="@drawable/ic_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.917"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.048" />

    <TextView
        android:id="@+id/welcomeInfo"
        android:layout_width="156dp"
        android:layout_height="75dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:gravity="center"
        android:text="@string/about_info_general"
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewWelcome"
        app:layout_constraintVertical_bias="0.045" />

    <TextView
        android:id="@+id/textViewGenTit"
        android:layout_width="235dp"
        android:layout_height="29dp"
        android:gravity="center"
        android:text="@string/about_generated_device_id"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.388" />

    <TextView
        android:id="@+id/aboutUuidTextView"
        android:textIsSelectable="true"
        android:layout_width="380dp"
        android:layout_height="35dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/border"
        android:gravity="center"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewGenTit"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/about_configure_info"
        android:layout_width="229dp"
        android:layout_height="56dp"
        android:gravity="center"
        android:text="@string/about_info_settings"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aboutUuidTextView"
        app:layout_constraintVertical_bias="0.578" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="158dp"
        android:layout_height="99dp"
        android:src="@drawable/ic_baseline_computer_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.861"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aboutUuidTextView"
        app:layout_constraintVertical_bias="0.413" />

    <TextView
        android:id="@+id/about_info_server"
        android:layout_width="216dp"
        android:layout_height="53dp"
        android:layout_marginTop="152dp"
        android:gravity="center"
        android:text="@string/about_info_server"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/about_configure_info"
        app:layout_constraintVertical_bias="0.126" />


</androidx.constraintlayout.widget.ConstraintLayout>
