<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondary"
    tools:context=".SettingsFragment">


    <TextView
        android:id="@+id/settingsTitle"
        android:layout_width="313dp"
        android:layout_height="41dp"
        android:fontFamily="@font/arbutus"
        android:text="@string/settings_title"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.163"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.043" />

    <TextView
        android:id="@+id/settingsSetupInfo"
        android:layout_width="202dp"
        android:layout_height="95dp"
        android:gravity="center"
        android:text="To connect device to server You need to pass server IP Address and specify server port."
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView3"
        app:layout_constraintHorizontal_bias="0.253"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsTitle"
        app:layout_constraintVertical_bias="0.051" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="102dp"
        android:layout_height="94dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:src="@drawable/ic_baseline_settings_applications_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsTitle"
        app:layout_constraintVertical_bias="0.003" />

    <TextView
        android:id="@+id/serverIpLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/serverIpInput"
        android:text="@string/settingsIpLabel"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/serverIpInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsSetupInfo"
        app:layout_constraintVertical_bias="1.0" />


    <EditText
        android:id="@+id/serverIpInput"
        android:layout_width="356dp"
        android:layout_height="55dp"
        android:layout_marginTop="50dp"
        android:autofillHints="IP address"
        android:background="@color/primaryInputVariant"
        android:digits="0123456789."
        android:ems="10"
        android:gravity="center"
        android:inputType="number|numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.29"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsSetupInfo" />

    <TextView
        android:id="@+id/serverPortLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/serverPortInput"
        android:text="@string/serverPortLabel"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/serverPortInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/serverIpInput"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/serverPortInput"
        android:layout_width="356dp"
        android:layout_height="55dp"
        android:autofillHints="Port number"
        android:background="@color/primaryInputVariant"
        android:digits="0123456789"
        android:ems="10"
        android:gravity="center"
        android:inputType="number|numberDecimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.29"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/serverIpInput"
        app:layout_constraintVertical_bias="0.116" />

    <Spinner
        android:id="@+id/intervalSpinner"
        android:layout_width="356dp"
        android:layout_height="55dp"
        android:background="@color/primaryInputVariant"
        android:gravity="center"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toTopOf="@+id/settingsApply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.29"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/serverPortInput"
        app:layout_constraintVertical_bias="0.287" />

    <Button
        android:id="@+id/settingsApply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/serverPortInput"
        app:layout_constraintVertical_bias="0.757" />

    <TextView
        android:id="@+id/locationSendIntervalLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_interval_label"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/intervalSpinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/serverPortInput"
        app:layout_constraintVertical_bias="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>
